--- a/style.css
+++ b/style.css
@@ -1,4 +1,55 @@
-header{
-    display:flex;
+* {
+    padding: 0;
+    margin: 0;
+    box-sizing: border-box;
+}
+
+header {
+    display: flex;
+    align-items: center;
+    background-color: green;
+    width: 100%;
+    height: 200px;
+    justify-content: space-evenly;
+}
+
+h1 {
+    font-size: 10rem;
+    color: white;
+    text-align: center;
+}
+footer{
+    background-color: green;
+    color: white;
+    display: flex;
+    justify-content:space-between;
+}
+form div{
+    display: flex;
+    flex-direction: column;
+}
+section{
+    
+    justify-content: space-around;
+}
+section figure img{
+    width: 200px;
+    height: 200px;
+}
+h2,h3{
+    text-align: center;
+}
+.refeicao{
+    display: flex;
+}
+h4{
+    text-align: left;
+}
+main{
+    display: flex;
+    flex-direction: column;
     align-items: center;
 }
+h2,h3,p{
+    display: flex;
+}   
